# fastapi-ecommerce-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init-db.sh  pyproject.toml  test_main.http
alembic/: env.py
alembic/versions/: 0fc2eb33b9fd_create_users_table.py  16fffdea9b9d_initial_migration_with_all_tables.py
app/: cli.py  main.py
app/auth/: dependencies.py  router.py  security.py
app/categories/: __init__.py  router.py  service.py
app/core/: config.py
app/database/: seed.py  session.py
app/enums/: order_status.py  user_role.py
app/models/: __init__.py  categories.py  order_items.py  orders.py  products.py  user.py
app/orders/: __init__.py  router.py  service.py
app/products/: __init__.py  router.py  service.py
app/schemas/: categories.py  orders.py  products.py  responses.py  user.py
app/users/: router.py  service.py
