[project]
name = "fastapi-ecommerce-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.6",
    "greenlet>=3.3.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.3",
    "black>=26.1.0",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "rich>=14.3.2",
    "ruff>=0.15.0",
    "typer>=0.23.0",
]
